# AgedCare

./: .gitignore  BLOCKCHAIN_INFO.md  BLOCKCHAIN_INFO_EN.md  CHANGELOG.md  LICENSE  PHAM_BLOCKCHAIN_LOG.md  README.md  README_EN.md  SIGNATURE.sha256  pyproject.toml
aged_care/: __init__.py  care_agent.py  monitor.py
aged_care/adapters/: __init__.py  battery_adapter.py  cognitive_adapter.py  emergency_adapter.py  nexus_adapter.py  snn_adapter.py
aged_care/audit/: __init__.py  care_chain.py
aged_care/bridges/: __init__.py  wheelchair_physics.py
aged_care/cognitive/: __init__.py  action_engine.py  emotion_engine.py  memory_engine.py
aged_care/contracts/: __init__.py  schemas.py
aged_care/handoff/: __init__.py  protocol.py
aged_care/monitor/: __init__.py  battery.py  omega.py
examples/: run_care_journey.py  run_executive_reporting.py
scripts/: regenerate_signature.py  verify_signature.py
tests/: conftest.py  test_aged_care.py  test_nexus_adapter.py  test_wheelchair_mobility_bridge.py
