[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name            = "aged-care-stack"
version         = "0.2.0"
description     = "AI 케어 시스템 — 하나의 에이전트가 AI 펫·자율 휠체어·자율 자동차를 넘나들며 노인을 케어한다"
readme          = "README.md"
license         = {text = "MIT"}
requires-python = ">=3.9"
keywords        = ["aged-care", "autonomous", "wheelchair", "care-agent", "ai-pet"]

[project.optional-dependencies]
autonomy = ["autonomy-runtime-stack"]
driving  = ["syd-drift"]
llm      = ["anthropic"]
dev      = ["pytest>=7.4", "pytest-cov"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"

[tool.setuptools.packages.find]
where = ["."]
include = ["aged_care*"]
