[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name            = "aged-care-stack"
version         = "0.2.2"
description     = "AI 케어 시스템 — 펫·휠체어·자동차 바디 핸드오프; 휠체어 기초 물리(VPF/4WD)·FSM 브리지 선택 연동"
readme          = "README.md"
license         = {text = "MIT"}
requires-python = ">=3.9"
keywords        = ["aged-care", "autonomous", "wheelchair", "care-agent", "ai-pet", "00_BRAIN"]
authors         = [{ name = "quarts co. / GNJz" }]

[project.urls]
Homepage   = "https://github.com/qquartsco-svg/AgedCare"
Repository = "https://github.com/qquartsco-svg/AgedCare"
Issues     = "https://github.com/qquartsco-svg/AgedCare/issues"

[project.optional-dependencies]
autonomy = ["autonomy-runtime-stack"]
driving  = ["syd-drift"]
llm      = ["anthropic"]
dev      = ["pytest>=7.4", "pytest-cov"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"

[tool.setuptools.packages.find]
where = ["."]
include = ["aged_care*"]
